--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.11.1",
